test/e2e/fixtures/grpc-bridge/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-bridge-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-bridge-echo
  template:
    metadata:
      labels:
        app: grpc-bridge-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: grpc-bridge-echo
            - name: KAT_BACKEND_TYPE
              value: grpc_echo
          ports:
            - containerPort: 8080
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-bridge-echo
spec:
  selector:
    app: grpc-bridge-echo
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: grpc
---
# The Module is global to one Emissary instance, hence `slot: exclusive`.
apiVersion: getambassador.io/v3alpha1
kind: Module
metadata:
  name: ambassador
spec:
  ambassador_id: [(env('SLOT'))]
  config:
    enable_grpc_http11_bridge: true
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: grpc-bridge
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /echo.EchoService/
  rewrite: /echo.EchoService/
  grpc: true
  service: grpc-bridge-echo:8080
